istio-test/gw/gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sunday-vs
spec:
  hosts:
  - gw.sundayhk.com
  gateways:
  - sunday-gw
  http:
  - route:
    - destination:
        host: httpd-svc
      weight: 50
    - destination:
        host: tomcat-svc
      weight: 50
